trying to fix book list container widths and spacing

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -1,5 +1,5 @@
 .book-list {
-  width: calc((450px * 2) + 2em);
+  width: calc((450px * 2));
   height: 100vh;
 }
 
@@ -12,8 +12,8 @@
   margin: 10px;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
-  gap: 2em;
-  width: calc((450px * 2) + 2em);
+  gap: 1em;
+  width: calc((450px * 2));
 }
 
 .scroll {
